remove datas dos permalinks e altera estrutura de categorias
Este commit altera os permalinks das postages, retirando
a data do padrão /2022/02/10/post.html para /termo/post.html

Para isso foi alterado o parâmetro permalink do arquivo _config.yml
e foi criada e adicionada aos dois posts de teste uma categoria
chamada "termo".

--- a/_config.yml
+++ b/_config.yml
@@ -4,6 +4,7 @@ author: jultty
 baseurl: ""
 domain: jultty.github.io
 url: "https://jultty.github.io"
+permalink: /:categories/:title:output_ext
 twitter_username: 
 github_username: jultty 
 avatar_url: /assets/images/venn.svg
