--- a/_config.yml
+++ b/_config.yml
@@ -16,6 +16,11 @@ remote_theme: huangyz0918/moving
 plugins:
   - jekyll-feed
 
+kramdown:
+  math_engine: mathjax
+  syntax_highlighter_opts:
+    disable: true
+
 collections:
     tags:
         output: true
