Insere cor de fundo no diagrama sobre-1.svg e move imagens
- Altera o diretório de imagens de assets/images para assets/img
- Move diagrama de exemplo do mermaid-js para o novo diretório
- Insere cor de fundo no código mermaid do diagrama
- Edita coesão da legenda do diagrama

--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ url: "https://jultty.github.io"
 permalink: /:categories/:title:output_ext
 twitter_username: 
 github_username: jultty 
-avatar_url: /assets/images/venn.svg
+avatar_url: /assets/img/venn.svg
 favicon: favicon.ico
 
 # Build settings
